# cpoker

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/lib/: assemble.cpp  assemble.h  card.cpp  card.h  model.h
